# sparkle

./: .gitignore  Cargo.toml  sdkconfig.defaults
.cargo/: config.toml
scripts/: bmp2rust.js
src/: ble_connection.rs  ble_scanner.rs  display.rs  main.rs  spark_message.rs
src/ble/: advertisement.rs  config.rs  mod.rs  scanner.rs  state.rs
src/display/: font.rs  mod.rs  sprites.rs
