[package]
edition = "2021"
name    = "sparkle"
version = "0.1.0"

[[bin]]
name = "sparkle"
path = "./src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1

[dependencies]

bt-hci = { version = "0.2" }
defmt = "1.0.1"
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["defmt", "task-arena-size-16384"] }
embassy-futures = { version = "0.1.1" }
embassy-sync = { version = "0.6.2" }
embassy-time = { version = "0.4.0", features = ["generic-queue-64"] }
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-hal = { version = "1.0.0" }
esp-alloc = { version = "0.7.0" }
esp-backtrace = { version = "0.15.1", features = ["esp32", "defmt", "panic-handler"] }
esp-println = { version = "0.13.1", features = ["esp32", "defmt-espflash"] }
esp-hal = { version = "1.0.0-beta.0", features = ["esp32", "defmt", "unstable"] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32"] }
esp-wifi = { version = "0.13.0", features = ["esp32", "ble"] }
lora-phy = { version = "3.0.1" }
ssd1306 = { version = "0.10.0", features = ["async"] }
static_cell = { version = "2.1.0" }
trouble-host = { git = "https://github.com/embassy-rs/trouble", package = "trouble-host", rev = "b6694cf00b602efe9c1c6e639e97218ebf623479" }
zerocopy = { version = "0.8.25", features = ["derive", "zerocopy-derive"] }

[profile.dev.package.esp-wifi]
opt-level = 3

