[package]
edition = "2021"
name    = "sparkle"
version = "0.1.0"

[[bin]]
name = "sparkle"
path = "./src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]

bt-hci = { version = "0.3.1", features = ["defmt"] }
defmt = "1.0.1"
embassy-embedded-hal = { default-features = false, git = "https://github.com/embassy-rs/embassy", rev = "e8b1ea14c7fb151aa5e296ca8f9724f175bdeaef" }
embassy-executor = { features = ["defmt"], git = "https://github.com/embassy-rs/embassy", rev = "e8b1ea14c7fb151aa5e296ca8f9724f175bdeaef" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "e8b1ea14c7fb151aa5e296ca8f9724f175bdeaef" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "e8b1ea14c7fb151aa5e296ca8f9724f175bdeaef" }
embassy-time = { features = ["generic-queue-64"], git = "https://github.com/embassy-rs/embassy", rev = "e8b1ea14c7fb151aa5e296ca8f9724f175bdeaef" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "e8b1ea14c7fb151aa5e296ca8f9724f175bdeaef" }

embedded-graphics = { version = "0.8.1", features = ["defmt"] }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-hal = { version = "1.0.0" }
esp-alloc = { version = "0.7.0" }
esp-backtrace = { version = "0.15.1", features = ["esp32", "defmt", "panic-handler"] }
esp-println = { version = "^0.13.0", features = ["esp32", "defmt-espflash"] }
esp-hal = { version = "1.0.0-beta.0", features = ["esp32", "defmt", "unstable", "__esp_hal_embassy"] }
esp-hal-embassy = { version = "0.7", features = ["esp32"] }
esp-wifi = { version = "0.13.0", features = ["esp32", "ble"] }
static_cell = { version = "2.1.0" }
trouble-host = { version = "0.1.0", git = "https://github.com/embassy-rs/trouble", rev = "7d72e8d", features = [
#    peripheral = []
#    controller-host-flow-control = []
#    connection-metrics = []
#    channel-metrics = []
#    dev-disable-csprng-seed-requirement = []
#    default-packet-pool = []
#    l2cap-sdu-reassembly-optimization = []
    "default-packet-pool-mtu-255",
    # "connection-metrics",
    # "channel-metrics",
    # "controller-host-flow-control",
    # "defmt",
    # "gatt",
    "scan",
    # "derive",
]}
zerocopy = { version = "0.8.25", features = ["derive", "zerocopy-derive"] }
defmt-rtt = "1.0.0"
arrayvec = { version = "0.7.6", default-features = false }
mipidsi = "0.9.0"
profont = "0.7.0"

[patch.crates-io]
esp-wifi = { git = "https://github.com/esp-rs/esp-hal.git", rev = "7b7844a85516d0a5c00df6b0e5f5a251abf323bb" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", rev = "7b7844a85516d0a5c00df6b0e5f5a251abf323bb" }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "7b7844a85516d0a5c00df6b0e5f5a251abf323bb" }
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal.git", rev = "7b7844a85516d0a5c00df6b0e5f5a251abf323bb" }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", rev = "7b7844a85516d0a5c00df6b0e5f5a251abf323bb" }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", rev = "7b7844a85516d0a5c00df6b0e5f5a251abf323bb" }

embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "e8b1ea14c7fb151aa5e296ca8f9724f175bdeaef" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "e8b1ea14c7fb151aa5e296ca8f9724f175bdeaef" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "e8b1ea14c7fb151aa5e296ca8f9724f175bdeaef" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "e8b1ea14c7fb151aa5e296ca8f9724f175bdeaef" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "e8b1ea14c7fb151aa5e296ca8f9724f175bdeaef" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "e8b1ea14c7fb151aa5e296ca8f9724f175bdeaef" }
embassy-time-queue-utils = { git = "https://github.com/embassy-rs/embassy", rev = "e8b1ea14c7fb151aa5e296ca8f9724f175bdeaef" }

[profile.dev.package.esp-wifi]
opt-level = 3

